email address.

2007-Oct-10 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * prevent OnRightClick() from calling PcbGeneralLocateAndDisplay() when creating
    a new track.
  * bug fix: popup menu was not handling Mires, because the collector was not 
    being asked to find them.
+ all
    Changed English UI text "Mire" to "Target" according to this post:
    http://tech.groups.yahoo.com/group/kicad-users/message/1380
    

2007-Oct-9 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
    changed pcbnew/onrightclick.cpp so that a right click only shows the
    Selection Clarification menu if there is no selected object or if the
    click is in a position different from where the selection was previously
    made.

    
2007-Oct-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema:
	cross-probing minor bug solved ( due to last modification): pins/pads not probed


2007-Oct-08 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ gerbview
    Display on screen now updates properly (in Linux version) after clicking on
    the "OK" button provided within the "GerbView Layer Colors" dialog box.


2007-Oct-7 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	create new file cross-probing.cpp
	move RemoteCommand() to cross-probing.cpp and create SendMessageToPCBNEW()

+ pcbnew
	bug in move pad fixed (could crash pcbnew)
	Small change in selection clarification (side effect removed):
	- Escape or click on title does not show the next popup menu.
	- the title is displayed under linux